# bot-aukerman-ui

./: .gitignore  README.md  dev-env.sh  pyproject.toml
src/bot_aukerman_ui/: asgi.py  db.sqlite3  manage.py  settings.py
src/bot_aukerman_ui/bot_aukerman_ui/: urls.py  wsgi.py
src/bot_aukerman_ui/perform/: models.py  performance_service.py  service.py  urls.py  views.py
src/bot_aukerman_ui/perform/migrations/: 0002_performance_title.py
src/bot_aukerman_ui/perform/static/perform/: perform.css
src/bot_aukerman_ui/perform/templates/perform/: _add_character.html  _performance_status.html  base.html  index.html  new_performance.html  performance.html
src/perform/: consumers.py  models.py  performance_service.py  routing.py  urls.py  views.py
src/perform/migrations/: 0001_initial.py  0003_remove_scene_performance_performance_scenes.py  0004_performance_deleted_at_performance_is_deleted.py  0005_character_performer.py
src/perform/static/perform/: bot-aukerman-ui.js
src/perform/static/perform/sass/: _base.scss  _buttons.scss  _colors.scss  _forms.scss  _home.scss  _navigation.scss  _new-performance.scss  _performance.scss  _typography.scss  style.scss
src/perform/templates/perform/: _add_character.html  _performance_controls.html  _performance_script.html  _performance_status.html  base.html  create_performance.html  index.html  new_performance.html  performance.html  settings.html
